ros2_ws/log/build_2025-10-12_11-26-39/shopee_main_service/stdout_stderr.log
running egg_info
writing ../../build/shopee_main_service/shopee_main_service.egg-info/PKG-INFO
writing dependency_links to ../../build/shopee_main_service/shopee_main_service.egg-info/dependency_links.txt
writing entry points to ../../build/shopee_main_service/shopee_main_service.egg-info/entry_points.txt
writing requirements to ../../build/shopee_main_service/shopee_main_service.egg-info/requires.txt
writing top-level names to ../../build/shopee_main_service/shopee_main_service.egg-info/top_level.txt
reading manifest file '../../build/shopee_main_service/shopee_main_service.egg-info/SOURCES.txt'
writing manifest file '../../build/shopee_main_service/shopee_main_service.egg-info/SOURCES.txt'
running build
running build_py
running install
running install_lib
byte-compiling /home/jinhyuk2me/dev_ws/Shopee/ros2_ws/install/shopee_main_service/lib/python3.12/site-packages/shopee_main_service/mock_robot_node.py to mock_robot_node.cpython-312.pyc
  File "/home/jinhyuk2me/dev_ws/Shopee/ros2_ws/install/shopee_main_service/lib/python3.12/site-packages/shopee_main_service/mock_robot_node.py", line 33
    from shopee_interfaces.srv import (
    ^^^^
SyntaxError: expected 'except' or 'finally' block

running install_data
running install_egg_info
removing '/home/jinhyuk2me/dev_ws/Shopee/ros2_ws/install/shopee_main_service/lib/python3.12/site-packages/shopee_main_service-0.0.1-py3.12.egg-info' (and everything under it)
Copying ../../build/shopee_main_service/shopee_main_service.egg-info to /home/jinhyuk2me/dev_ws/Shopee/ros2_ws/install/shopee_main_service/lib/python3.12/site-packages/shopee_main_service-0.0.1-py3.12.egg-info
running install_scripts
Installing main_service_node script to /home/jinhyuk2me/dev_ws/Shopee/ros2_ws/install/shopee_main_service/lib/shopee_main_service
Installing mock_robot_node script to /home/jinhyuk2me/dev_ws/Shopee/ros2_ws/install/shopee_main_service/lib/shopee_main_service
writing list of installed files to '/home/jinhyuk2me/dev_ws/Shopee/ros2_ws/build/shopee_main_service/install.log'
